# viper

./: .coveragerc  .gitignore  .gitmodules  .travis.yml  AUTHORS  CHANGELOG  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  alembic.ini  api.py  config.py  db_migrate.py  install.py  manage.py  mkdocs.yml  requirements-base.txt  requirements-dev.txt  requirements-modules.txt  requirements-source.txt  requirements-web.txt  requirements.txt  settings_local.py.sample  setup.cfg  setup.py  tox.ini  update.py  viper-api  viper-api.py  viper-cli  viper-update  viper-update.py  viper-web  viper-web.py  viper.cfg  viper.conf  viper.conf.example  viper.conf.sample  (+3 more)
.github/: FUNDING.yml
.github/workflows/: codeql-analysis.yml
api-usage-samples/: viper_submit.py  viper_upload.py
data/peid/: UserDB.TXT
data/web/: cli.tpl  error.tpl  file.tpl  footer.tpl  header.tpl  index.tpl  search.tpl  yara.tpl
data/yara/: APT_NGO_wuaclt_PDF.yara  GeorBotBinary.yara  GeorBotMemory.yara  apt1.yara  citizenlab.yara  embedded.yara  fpu.yara  hangover.yara  index.yara  kins.yara  leverage.yar  rats.yara  themask.yara  urausy_skypedat.yar
dev/: viper
docs/: Makefile  make.bat
modules/: __init__.py  andro.py  antivirus.py  apk.py  atd.py  bodies.py  bodies_all.py  chunks.py  chunks_all.py  clamav.py  cuckoo.py  debup.py  decode.php  decode.py  decode_all.py  editdistance.py  elf.py  emailparse.py  exif.py  export.py  function_bodies.php  functions.php  functions.py  functions_all.py  fuzzy.py  heatmap.py  hosts.py  htmlparser.py  hybridanalysis.py  ida.py  idx.py  image.py  jar.py  java.py  koodous.py  lastline.py  maa.py  macho.py  matrix.py  misp.py  (+22 more)
scripts/: lint.sh
tests/: conftest.py  test_usecases.py  viper-test-files
viper/: __init__.py
(+446 files in other folders)
