[metadata]
name = viper-framework
version = attr: viper.common.version.VIPER_VERSION
author = Claudio Guarnieri
author_email = nex@nex.sx
description = Viper Framework
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/viper-framework/viper
keywords = security, binary, malware
license = BSD 3-Clause
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Information Technology
    Operating System :: OS Independent
    Programming Language :: Python

[options]
packages = find:
package_dir = = ./
include_package_data = True
python_requires = >= 3.6
install_requires =
    python-magic >=0.4.27
    requests[socks] >=2.29.0
    requests-cache >=1.0.1
    sqlalchemy >=2.0.12
    pydeep >=0.4
    rarfile >=4.0
    rich >=13.3.5

[options.packages.find]
where = ./

[options.entry_points]
console_scripts =
    viper = viper.core.ui.main:main

[flake8]
max-complexity = 10
max-line-length = 1000
ignore =
    C901,
    E265,
    F401,
    E127,
    W503,
    E226

[pylint]
score = no
reports = no
output-format = colorized

max-locals = 25
max-args = 10

good-names = i,m

min-similarity-lines = 10
ignore-comments = yes
ignore-docstrings = yes
ignore-imports = yes

ignored-argument-names=args|kwargs

# https://pylint.pycqa.org/en/stable/technical_reference/features.html
disable =
    too-many-instance-attributes,
    broad-except,
    abstract-method,
    dangerous-default-value,
    too-few-public-methods,
    missing-docstring,
    missing-module-docstring,
    missing-class-docstring,
    missing-function-docstring,
    #duplicate-code,
    #line-too-long,
